--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 		<div class="ryu">
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
+			<div class="ryu-cool"></div>
 			<div class="ryu-throwing"></div>
 		</div>
 		<div class="hadouken"></div>
