add game instructions

--- a/main.html
+++ b/main.html
@@ -1,23 +1,34 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Streetfighter</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8">
+    <title>Streetfighter</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-	<div class="main">
-		<div class="ryu">
-			<div class="ryu-still"></div>
-			<div class="ryu-ready"></div>
-			<div class="ryu-cool"></div>
-			<div class="ryu-throwing"></div>
-		</div>
-		<div class="hadouken"></div>
-	</div>
-	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
-	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<script src="js/app.js"></script>
+    <div class="main">
+        <div class="ryu">
+            <div class="ryu-still"></div>
+            <div class="ryu-ready"></div>
+            <div class="ryu-cool"></div>
+            <div class="ryu-throwing"></div>
+        </div>
+        <div class="hadouken"></div>
+        <div class="instructions">
+        	<h3>Instructions</h3>
+            <p class="throw">Click on Ryu to throw a hadouken.</p>
+            <p class="pose">
+                Press and hold the 'x' key to make him strike a pose.
+            </p>
+        </div>
+
+    </div>
+    <audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
