--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
             <div class="ryu-throwing"></div>
         </div>
         <div class="hadouken"></div>
+        <div class="hulk-hadouken"></div>
         <div class="instructions">
         	<h3>Instructions</h3>
             <p class="throw">Click on Ryu to throw a hadouken.</p>
@@ -24,7 +25,12 @@
                 Press and hold the 'x' key to make him strike a pose.
             </p>
         </div>
-
+        <div class="hulk-ryu">
+            <div class="ryu-still"></div>
+            <div class="ryu-ready"></div>
+            <div class="ryu-cool"></div>
+            <div class="ryu-throwing"></div>
+        </div>
     </div>
     <audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
     <script src="http://code.jquery.com/jquery.min.js"></script>
