ryu & hulk ryu face off with instructions

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
         	<h3>Instructions</h3>
             <p class="throw">Click on Ryu to throw a hadouken.</p>
             <p class="pose">
-                Press and hold the 'x' key to make him strike a pose.
+                Press and hold the 'x' or 'y' key to make him strike a pose.
             </p>
         </div>
         <div class="hulk-ryu">
